# zombie_friends

./: .exrc  CMakeLists.txt  Makefile  README.md  cmd_launcher  compile_commands.json  default.set  get_files_from_build.sh  has_script_location.cms  image_list.il  level_edit  map_data.mp  ok_boomer.mp  options.txt  settings.set  test_command.cms  test_route.nfd  test_startup.cms  weird_map.mp  zombie_friends  zombie_friends.vim  zombie_friends_launcher
fltk/: config.h  config.status  configure  fltk-config  fltk.list  makeinclude
fltk/autom4te.cache/: output.0  requests  traces.0
fltk/test/: CubeViewUI.cxx  CubeViewUI.h  fast_slow.cxx  fast_slow.h  inactive.cxx  inactive.h  keyboard_ui.cxx  keyboard_ui.h  mandelbrot_ui.cxx  mandelbrot_ui.h  preferences.cxx  preferences.h  radio.cxx  radio.h  resize.cxx  resize.h  tabs.cxx  tabs.h  tree.cxx  tree.h  valuators.cxx  valuators.h
instances/: options.txt  stuff
instances/zombie_friends/: map.mp  options.txt  startup.cms
logs/: 2022-11-14-1671080694.txt  2022-11-14-1671080902.txt  2022-11-14-1671080917.txt  2022-11-14-1671081116.txt  2022-11-14-1671081160.txt  2022-11-14-1671081528.txt  2022-11-14-1671081567.txt  2022-11-15-1671134887.txt  2022-11-15-1671140158.txt  2022-11-15-1671162630.txt  2022-11-15-1671165905.txt  2022-11-15-1671168304.txt  2022-11-15-1671168701.txt  2022-11-15-1671168919.txt  2022-11-15-1671169252.txt  2022-11-15-1671169504.txt  2022-11-15-1671169551.txt  2022-11-15-1671170036.txt  2022-11-15-1671171205.txt  2022-11-15-1671171546.txt  2022-11-15-1671171603.txt  2022-11-15-1671171679.txt  2022-11-15-1671171776.txt  2022-11-15-1671171841.txt  2022-11-15-1671171900.txt  2022-11-15-1671171915.txt  2022-11-15-1671171923.txt  2022-11-15-1671171944.txt  2022-11-15-1671171965.txt  2022-11-15-1671171972.txt  2022-11-15-1671172119.txt  2022-11-15-1671173283.txt  2022-11-15-1671173473.txt  2022-11-15-1671173671.txt  2022-11-16-1671183682.txt  2022-11-16-1671185828.txt  2022-11-16-1671186010.txt  2022-11-16-1671186018.txt  2022-11-16-1671186035.txt  2022-11-16-1671186052.txt  (+602 more)
src/: .tab_menu.h.swp  Makefile  appWindow.cpp  appWindow.h  astar_pathfinder.cpp  astar_pathfinder.h  character.cpp  character.h  character_preview.cpp  character_preview.h  chat_box.cpp  chat_box.h  common_item.cpp  common_item.h  common_tool.cpp  common_tool.h  debug_window.cpp  debug_window.h  dll_format.h  dll_loader.cpp  dll_loader.h  evil_puppy.cpp  evil_puppy.h  game_commands.cpp  game_commands.h  game_tab_menu.cpp  game_tab_menu.h  game_tools.cpp  game_tools.h  gun.cpp  gun.h  id_to_object.cpp  id_to_object.h  image_loader.cpp  image_loader.h  loader_file_handling.cpp  loader_file_handling.h  main.cpp  map.cpp  map.h  (+31 more)
src/launcher/: CMakeLists.txt  Makefile  launcher.cpp  launcher.h  launcher_option_editor.cpp  launcher_option_editor.h  launcher_top_menu.cpp  launcher_top_menu.h  launcher_window.cpp  launcher_window.h  main.cpp
src/launcher/cmd_launcher/: CMakeLists.txt  Makefile  main.cpp
src/launcher_dlls/: CMakeLists.txt  Makefile  game.cpp  game.h  zombie_friends.cpp
src/level_edit/: CMakeLists.txt  Makefile  editWindow.cpp  editWindow.h  edit_commands.cpp  edit_commands.h  edit_item_command_list.cpp  edit_item_command_list.h  edit_item_creater.cpp  edit_item_creater.h  edit_menu.cpp  (+9 more)
test_level/: image_list2.il  init.cms  test_image_list.il  test_map.mp  test_settings.set
(+149 files in other folders)
